#43 Utilizado Dockling para envio e interpretação de arquivos PDF, DOC e DOCX (#46)
